--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kitten</title>
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon/5863kitten-small.ico">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  
 </head>
 <body>
-  
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 landscape">
+              <div class="kitten">
+              </div>
+            </div> 
+        </div>
+    </div>
 </body>
 </html>
