cambios a kitten y readme

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon/5863kitten-small.ico">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/grid.css">
   
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 landscape">
-              <div class="kitten">
+              <div class="col-xs-offset-3 kitten">
               </div>
             </div> 
         </div>
