--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   
 </head>
 <body>
+    <!--Grid-->
     <div class="container">
         <div class="row">
+            <!--Contenedor-->
             <div class="col-xs-12 landscape">
+                <!--Kitten-->
               <div class="col-xs-offset-3 kitten">
               </div>
             </div> 
