agrega guía de estilos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <!--Contenedor-->
             <div class="col-xs-12 landscape">
                 <!--Kitten-->
-              <div class="col-xs-offset-3 kitten">
-              </div>
+              <div class="col-xs-offset-3 kitten"></div>
             </div> 
         </div>
     </div>
